<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.pmdm.diurno.practica2pmdm.Activitys.MainActivity">

    <TextView
        android:id="@+id/tv_tituloApuestas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloApuestas"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_apuestaMarcada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apuesta_marcada"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="abrirRegistro"
        android:text="@string/btn_registro" />

    <Button
        android:id="@+id/btn_apuestas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="abrirApuestas"
        android:text="@string/btn_apuestas" />

    <Button
        android:id="@+id/btn_ajustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="abrirAjustes"
        android:text="@string/btn_ajustes" />

    <Button
        android:id="@+id/btn_resultados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="abrirResultados"
        android:text="@string/btn_resultados" />

</LinearLayout>
