<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.pmdm.diurno.practica2pmdm.RegistroActivity">

    <TextView
        android:id="@+id/tv_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_registro"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_fechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/et_fechaNacimiento"
        android:inputType="none|date"
        android:onClick="dialogoFecha" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_validar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="validar"
            android:text="@string/btn_validar" />

        <Button
            android:id="@+id/btn_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="volver"
            android:text="@string/btn_volver" />
    </LinearLayout>
</LinearLayout>
