<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.pmdm.diurno.practica2pmdm.Activitys.AcercaDeActivity">

    <TextView
        android:id="@+id/tv_acercaDer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/tv_acercaDe"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/tv_autor" />

    <TextView
        android:id="@+id/tv_anno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/tv_anno" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="volver"
        android:text="@string/btn_volver" />
</LinearLayout>
